[tool.poetry]
name = "handyrl"
version = "0.0.1"
description = "Simple framework of distributed reinforcement learning on Python/PyTorch"
authors = ["DeNA Co., Ltd."]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

PyYAML = "^5.4.1"
numpy = "^1.20.2"
torch = "^1.8.1"
pytest = "^6.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
